# opentelemetry-workshop

./: README.md
lab-1-instrumentation/: Dockerfile  README.md  SETUP_README.md  app.py  auto_instrumentation.sh  docker.sh  jaeger_docker_run.sh  pyproject.toml  requirements.txt
lab-1-instrumentation/chart-flask-app/: Chart.yaml  values.yaml
lab-1-instrumentation/chart-flask-app/templates/: deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
lab-1-instrumentation/chart-flask-app/templates/tests/: test-connection.yaml
lab-1-instrumentation/scripts/: run_app.sh  run_prometheus.sh
scripts/: run_app.sh  run_jaeger.sh
